# client-server-ipc-communication-v1

./: .gitignore  CMakeLists.txt  README.md
include/: Common.h
include/Client/: Client.h
include/Server/: Server.h  ServerUtils.h
src/Client/: Client.c
src/Server/: Server.c  ServerUtils.c
test/: Active.bash  Clear.bash  Create.bash
